# rpicam-gui

./: .gitignore  AUTHORS.md  BUGREPORTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  history.txt  options_rpicam-vid.md  rpicam-gui  rpicam-gui.conf  rpicam-gui.desktop
config/: config01_cam1.txt  config02_cam1.txt  config1.txt
resources/: resources.qrc
src/: Version.h  main.cpp
src/controllers/: RpiCamController.cpp  RpiCamController.h
src/gui/: CustomLineEdit.h  Defaults.h  GuiSetupDialog.cpp  GuiSetupDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowHelpers.cpp  SelectionOverlay.cpp  SelectionOverlay.h  rpicam-gui  test.cpp
src/models/: RpiCamParams.cpp  RpiCamParams.h
src/utils/: CommandExecutor.cpp  CommandExecutor.h  DebugLogger.cpp  DebugLogger.h
